# Lets-Meet

./: .gitignore  README.md  docker-compose.yaml  makefile  package-lock.json
backend/: .bb  .dic  .env.example  Dockerfile  config.py  const.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  security.py
backend/base/: calendar.py  do.py  enums.py  model.py  vo.py
backend/exceptions/: __init__.py
backend/middleware/: auth.py  context.py  exception_handler.py
backend/persistence/database/: __init__.py  account.py  available_time.py  calendar.py  email_verification.py  event.py  meet.py  meet_member.py  routine.py  util.py
backend/persistence/email/: __init__.py  event_reminding.py  forget_password.py  invite_to_meet.py  meet_reminding.py  verification.py  voting_notification.py
backend/processor/http/: __init__.py  account.py  calendar.py  google.py  line.py  meet.py  public.py  routine.py  scheduler.py  test_account.py  util.py
backend/service/: __init__.py  calendar.py  line.py  meet.py
backend/test/processor/http/: test_account.py  test_calendar.py  test_google.py  test_meet.py  test_public.py  test_routine.py
backend/test/service/: test_meet.py
database/: .gitignore  docker-compose.yaml
database/sql/: V1.001__init.sql  V1.002__mock.sql  V1.003__fix-mock-data.sql  V1.003__fixMockData.sql  V1.004__addHasVote.sql  V1.005__addIndex.sql
frontend/: .env  .env.example  .gitignore  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  Mainpage.js  i18n.js  index.css  index.css.map  (+2 more)
(+100 files in other folders)
